--- a/config/btas16.yaml
+++ b/config/btas16.yaml
@@ -6,7 +6,7 @@ optimizer: Adam
 optimizer_args:
   lr: 0.004
 transforms: [] # no transformations
-batch_size: 64
+batch_size: 32 # Some utterances are rather long
 num_workers: 3
 epochs: 100
 # BCELoss has no args, otherwise FocalLoss can have 'alpha' and 'gamma'
