--- a/config/FoR_norm.yaml
+++ b/config/FoR_norm.yaml
@@ -1,12 +1,12 @@
-traindata: features/hdf5/FoR/spec/train.h5
-trainlabel: data/filelists/FoR/train.csv
-testdata: [data/hdf5/FoR/eval.h5] #Multiple testdata is also allowed
-testlabel: [data/hdf5/FoR/eval.csv]
+traindata: features/hdf5/FoR_norm/spec/train.h5
+trainlabel: data/filelists/FoR/for-norm_train.tsv
+testdata: [data/hdf5/FoR_norm/spec/eval.h5] #Multiple testdata is also allowed
+testlabel: [data/filelists/FoR/for-norm_eval.tsv]
 optimizer: Adam
 optimizer_args:
   lr: 0.004
 transforms: [] # no transformations
-batch_size: 64
+batch_size: 32
 num_workers: 3
 epochs: 100
 # BCELoss has no args, otherwise FocalLoss can have 'alpha' and 'gamma'
