Added shuffling as default strategy for training

--- a/config/asv17.yaml
+++ b/config/asv17.yaml
@@ -15,4 +15,5 @@ loss_args: {}
 model: LightCNN
 model_args: {}
 sampler: {} # No extra sampling strategy
+shuffle: True
 outputpath: experiments/asv17/
