--- a/config/btas16.yaml
+++ b/config/btas16.yaml
@@ -15,5 +15,6 @@ loss_args: {}
 model: LightCNN
 model_args: {}
 sampler: {} # No extra sampling strategy
+shuffle: True
 outputpath: experiments/btas16/
 
