--- a/config/FoR_2sec.yaml
+++ b/config/FoR_2sec.yaml
@@ -16,4 +16,5 @@ loss_args: {}
 model: LightCNN
 model_args: {}
 sampler: {} # No extra sampling strategy
+shuffle: True
 outputpath: experiments/FoR/
